@@ -1,3 +1,4 @@
+* FEA#7097 Add default dunning procedure
 * BUG#6617 Void contracts that were never paid
 
 Version 1.12 - 2017-04-28
